--- a/govuk_frontend_jinja/templates/components/checkboxes/macro.html
+++ b/govuk_frontend_jinja/templates/components/checkboxes/macro.html
@@ -46,14 +46,14 @@
       {{ govukLabel({
         'html': item.html,
         'text': item.text,
-        'classes': 'govuk-checkboxes__label' ~ (' ' ~ item.label.classes if item.label and item.label.classes else ''),
+        'classes': 'govuk-checkboxes__label' ~ (' ' ~ item.label.classes if item.label and item.label.classes else ""),
         'attributes': item.label.attributes if item.label,
         'for': itemId
       }) | trim | indent(6) }}
       {% if hasHint %}
       {{ govukHint({
         'id': itemHintId,
-        'classes': 'govuk-checkboxes__hint' ~ (' ' ~ item.hint.classes if item.hint and item.hint.classes else ''),
+        'classes': 'govuk-checkboxes__hint' ~ (' ' ~ item.hint.classes if item.hint and item.hint.classes else ""),
         'attributes': item.hint.attributes if item.hint,
         'html': item.hint.html,
         'text': item.hint.text
