--- a/govuk_frontend_jinja/templates/components/radios/macro.html
+++ b/govuk_frontend_jinja/templates/components/radios/macro.html
@@ -55,7 +55,7 @@
     </div>
     {% if item.conditional and item.conditional.html %}
     <div class="govuk-radios__conditional {%- if not isChecked %} govuk-radios__conditional--hidden{% endif %}" id="{{ conditionalId }}">
-      {{ item.conditional.html | safe | trim | indent(6) }}
+      {{ item.conditional.html | safe | trim }}
     </div>
     {% endif %}
   {% endif %}
@@ -89,7 +89,7 @@
   <div class="govuk-radios {%- if params.classes %} {{ params.classes }}{% endif %}"
     {{- govukAttributes(params.attributes) }} data-module="govuk-radios">
     {% if params.formGroup and params.formGroup.beforeInputs %}
-    {{ params.formGroup.beforeInputs.html | safe | trim | indent(4) if params.formGroup.beforeInputs.html else params.formGroup.beforeInputs.text }}
+    {{ params.formGroup.beforeInputs.html | safe | trim | indent(4) if params.formGroup and params.formGroup.beforeInputs.html else params.formGroup.beforeInputs.text }}
     {% endif %}
     {% for item in params['items'] %}
       {% if item %}
@@ -97,7 +97,7 @@
       {% endif %}
     {% endfor %}
     {% if params.formGroup and params.formGroup.afterInputs %}
-    {{ params.formGroup.afterInputs.html | safe | trim | indent(4) if params.formGroup.afterInputs.html else params.formGroup.afterInputs.text }}
+    {{ params.formGroup.afterInputs.html | safe | trim | indent(4) if params.formGroup and params.formGroup.afterInputs.html else params.formGroup.afterInputs.text }}
     {% endif %}
   </div>
 {% endset -%}
