lowercase only bools

--- a/govuk_frontend_jinja/templates/macros/attributes.html
+++ b/govuk_frontend_jinja/templates/macros/attributes.html
@@ -76,7 +76,7 @@
 
       {#- Set default attribute options -#}
       {% set options = value if value is mapping else {
-        'value': value,
+        'value': value if value is string else value | lower,
         'optional': false
       } %}
 
