--- a/govuk_frontend_jinja/templates/components/file-upload/macro.html
+++ b/govuk_frontend_jinja/templates/components/file-upload/macro.html
@@ -1,12 +1,15 @@
 {% macro govukFileUpload(params) %}
 {% from "govuk_frontend_jinja/macros/attributes.html" import govukAttributes %}
+{% from "govuk_frontend_jinja/macros/i18n.html" import govukI18nAttributes %}
 {% from "govuk_frontend_jinja/components/error-message/macro.html" import govukErrorMessage %}
 {% from "govuk_frontend_jinja/components/hint/macro.html" import govukHint %}
 {% from "govuk_frontend_jinja/components/label/macro.html" import govukLabel %}
 
 {#- a record of other elements that we need to associate with the input using
   aria-describedby – for example hints or error messages -#}
-{% set describedBy = params.describedBy if params.describedBy else "" %}
+{%- set describedBy = params.describedBy if params.describedBy else "" -%}
+{%- set id = params.id if params.id else params.name -%}
+
 <div class="govuk-form-group {%- if params.errorMessage %} govuk-form-group--error{% endif %} {%- if params.formGroup and params.formGroup.classes %} {{ params.formGroup.classes }}{% endif %}"
   {{- govukAttributes(params.formGroup.attributes if params.formGroup) }}>
   {{ govukLabel({
@@ -15,10 +18,10 @@
     'classes': params.label.classes,
     'isPageHeading': params.label.isPageHeading,
     'attributes': params.label.attributes,
-    'for': params.id
+    'for': id
   }) | trim | indent(2) }}
 {% if params.hint %}
-  {% set hintId = params.id ~ '-hint' %}
+  {% set hintId = id ~ '-hint' %}
   {% set describedBy = describedBy ~ ' ' ~ hintId if describedBy else hintId %}
   {{ govukHint({
     'id': hintId,
@@ -29,7 +32,7 @@
   }) | trim | indent(2) }}
 {% endif %}
 {% if params.errorMessage %}
-  {% set errorId = params.id ~ '-error' %}
+  {% set errorId = id ~ '-error' %}
   {% set describedBy = describedBy ~ ' ' ~ errorId if describedBy else errorId %}
   {{ govukErrorMessage({
     'id': errorId,
@@ -43,11 +46,45 @@
 {% if params.formGroup and params.formGroup.beforeInput %}
   {{ params.formGroup.beforeInput.html | safe | trim | indent(2) if params.formGroup and params.formGroup.beforeInput.html else params.formGroup.beforeInput.text }}
 {% endif %}
-  <input class="govuk-file-upload {%- if params.classes %} {{ params.classes }}{% endif %} {%- if params.errorMessage %} govuk-file-upload--error{% endif %}" id="{{ params.id }}" name="{{ params.name }}" type="file"
+{% if params.javascript %}
+  <div
+    class="govuk-drop-zone"
+    data-module="govuk-file-upload"
+    {{- govukI18nAttributes({
+      'key': 'choose-files-button',
+      'message': params.chooseFilesButtonText
+    }) -}}
+    {{- govukI18nAttributes({
+      'key': 'no-file-chosen',
+      'message': params.noFileChosenText
+    }) -}}
+    {{- govukI18nAttributes({
+      'key': 'multiple-files-chosen',
+      'messages': params.multipleFilesChosenText
+    }) -}}
+    {{- govukI18nAttributes({
+      'key': 'drop-instruction',
+      'message': params.dropInstructionText
+    }) -}}
+    {{- govukI18nAttributes({
+      'key': 'entered-drop-zone',
+      'message': params.enteredDropZoneText
+    }) -}}
+    {{- govukI18nAttributes({
+      'key': 'left-drop-zone',
+      'message': params.leftDropZoneText
+    }) -}}
+  >
+{% endif %}
+  <input class="govuk-file-upload {%- if params.classes %} {{ params.classes }}{% endif %} {%- if params.errorMessage %} govuk-file-upload--error{% endif %}" id="{{ id }}" name="{{ params.name }}" type="file"
   {%- if params.value %} value="{{ params.value }}"{% endif %}
   {%- if params.disabled %} disabled{% endif %}
+  {%- if params.multiple %} multiple{% endif %}
   {%- if describedBy %} aria-describedby="{{ describedBy }}"{% endif %}
   {{- govukAttributes(params.attributes) }}>
+{% if params.javascript %}
+  </div>
+{% endif %}
 {% if params.formGroup and params.formGroup.afterInput %}
   {{ params.formGroup.afterInput.html | safe | trim | indent(2) if params.formGroup and params.formGroup.afterInput.html else params.formGroup.afterInput.text }}
 {% endif %}
