--- a/govuk_frontend_jinja/templates/components/select/macro.html
+++ b/govuk_frontend_jinja/templates/components/select/macro.html
@@ -7,6 +7,8 @@
 {#- a record of other elements that we need to associate with the input using
   aria-describedby – for example hints or error messages -#}
 {% set describedBy = params.describedBy if params.describedBy else "" %}
+{%- set id = params.id if params.id else params.name -%}
+
 <div class="govuk-form-group {%- if params.errorMessage %} govuk-form-group--error{% endif %} {%- if params.formGroup and params.formGroup.classes %} {{ params.formGroup.classes }}{% endif %}"
   {{- govukAttributes(params.formGroup.attributes if params.formGroup) }}>
   {{ govukLabel({
@@ -15,10 +17,10 @@
     'classes': params.label.classes,
     'isPageHeading': params.label.isPageHeading,
     'attributes': params.label.attributes,
-    'for': params.id
+    'for': id
   }) | trim | indent(2) }}
 {% if params.hint %}
-  {% set hintId = params.id ~ '-hint' %}
+  {% set hintId = id ~ '-hint' %}
   {% set describedBy = describedBy ~ ' ' ~ hintId if describedBy else hintId %}
   {{ govukHint({
     'id': hintId,
@@ -29,7 +31,7 @@
   }) | trim | indent(2) }}
 {% endif %}
 {% if params.errorMessage %}
-  {% set errorId = params.id ~ '-error' %}
+  {% set errorId = id ~ '-error' %}
   {% set describedBy = describedBy ~ ' ' ~ errorId if describedBy else errorId %}
   {{ govukErrorMessage({
     'id': errorId,
@@ -44,13 +46,13 @@
   {{ params.formGroup.beforeInput.html | safe | trim | indent(2) if params.formGroup and params.formGroup.beforeInput.html else params.formGroup.beforeInput.text }}
 {% endif %}
   <select class="govuk-select
-    {%- if params.classes %} {{ params.classes }}{% endif %}{%- if params.errorMessage %} govuk-select--error{% endif %}" id="{{ params.id }}" name="{{ params.name }}"
+    {%- if params.classes %} {{ params.classes }}{% endif %}{%- if params.errorMessage %} govuk-select--error{% endif %}" id="{{ id }}" name="{{ params.name }}"
     {%- if params.disabled %} disabled{% endif %}
     {%- if describedBy %} aria-describedby="{{ describedBy }}"{% endif %}
     {{- govukAttributes(params.attributes) }}>
     {% if 'items' in params and params['items'] | length %}
       {% for item in params['items'] %}
-      {% if item %}
+        {% if item %}
         {#- Allow selecting by text content (the value for an option when no value attribute is specified) #}
         {%- set effectiveValue = item.value | default(item.text) %}
         <option {%- if item.value is not undefined %} value="{{ item.value | lower }}"{% endif %}
@@ -59,9 +61,9 @@
           {{- govukAttributes(item.attributes) }}>
           {{- item.text -}}
         </option>
-      {% endif %}
-    {% endfor %}
-  {% endif %}
+        {% endif %}
+      {% endfor %}
+    {% endif %}
   </select>
 {% if params.formGroup and params.formGroup.afterInput %}
   {{ params.formGroup.afterInput.html | safe | trim | indent(2) if params.formGroup and params.formGroup.afterInput.html else params.formGroup.afterInput.text }}
