--- a/govuk_frontend_jinja/templates/components/service-navigation/macro.html
+++ b/govuk_frontend_jinja/templates/components/service-navigation/macro.html
@@ -1,16 +1,16 @@
 {% macro govukServiceNavigation(params) %}
 {% from "govuk_frontend_jinja/macros/attributes.html" import govukAttributes %}
 
-{%- set menuButtonText = params.menuButtonText | default("Menu", true) -%}
-{%- set navigationId = params.navigationId | default("navigation", true) %}
+{%- set menuButtonText = params.menuButtonText or "Menu" -%}
+{%- set navigationId = params.navigationId or "navigation" %}
 
-{%- set commonAttributes %}
+{%- set commonAttributes -%}
 class="govuk-service-navigation {%- if params.classes %} {{ params.classes }}{% endif %}"
 data-module="govuk-service-navigation"
-{{- govukAttributes(params.attributes) }}
-{% endset -%}
+{{- govukAttributes(params.attributes) if params.attributes else '' }}
+{%- endset -%}
 
-{%- set innerContent %}
+{%- set innerContent -%}
   <div class="govuk-width-container">
 
     {# Slot: start #}
@@ -33,8 +33,9 @@ data-module="govuk-service-navigation"
       {% endif %}
 
       {# Navigation #}
-      {% if params.navigation | length or params.slots and (params.slots.navigationStart or params.slots.navigationEnd) %}
-        <nav aria-label="{{ params.navigationLabel | default(menuButtonText, true) }}" class="govuk-service-navigation__wrapper {%- if params.navigationClasses %} {{ params.navigationClasses }}{% endif %}">
+      {% set navigationItems = ((params.navigation or []) | select | list) %}
+      {% if navigationItems | length or (params.slots and params.slots.navigationStart) or (params.slots and params.slots.navigationEnd) %}
+        <nav aria-label="{{ params.navigationLabel or menuButtonText }}" class="govuk-service-navigation__wrapper {%- if params.navigationClasses %} {{ params.navigationClasses }}{% endif %}">
           <button type="button" class="govuk-service-navigation__toggle govuk-js-service-navigation-toggle" aria-controls="{{ navigationId }}" {%- if params.menuButtonLabel and params.menuButtonLabel != menuButtonText %} aria-label="{{ params.menuButtonLabel }}"{% endif %} hidden>
             {{ menuButtonText }}
           </button>
@@ -44,8 +45,8 @@ data-module="govuk-service-navigation"
             {# Slot: navigationStart #}
             {%- if params.slots and params.slots.navigationStart %}{{ params.slots.navigationStart | safe }}{% endif -%}
 
-            {% for item in params.navigation %}
-              {% set linkInnerContent %}
+            {% for item in navigationItems %}
+              {% set linkInnerContent -%}
                 {# We wrap active links in strong tags so that users who
                   override colours or styles will still have some indicator of
                   the current nav item. #}
@@ -54,7 +55,7 @@ data-module="govuk-service-navigation"
                 {% else %}
                   {{- item.html | safe if item.html else item.text -}}
                 {% endif %}
-              {% endset %}
+              {%- endset %}
 
               {#
                 If item.current, add active style and set aria-current="page"
@@ -64,7 +65,7 @@ data-module="govuk-service-navigation"
                 {% if item.href %}
                   <a class="govuk-service-navigation__link" href="{{ item.href }}"
                     {%- if item.active or item.current %} aria-current="{{ 'page' if item.current else 'true' }}"{% endif %}
-                    {{- govukAttributes(item.attributes) -}}>
+                    {{- govukAttributes(item.attributes) if item.attributes else '' -}}>
                     {{ linkInnerContent | safe }}
                   </a>
                 {% elif item.html or item.text %}
@@ -87,13 +88,13 @@ data-module="govuk-service-navigation"
     {%- if params.slots and params.slots.end %}{{ params.slots.end | safe }}{% endif -%}
 
   </div>
-{% endset -%}
+{%- endset -%}
 
 {# If a service name is included, we use a <section> element with an
   aria-label to create a containing landmark region. Otherwise, the <nav> in
   the innerContent can do the job just fine by itself. #}
-{% if params.serviceName or params.slots and (params.slots.start or params.slots.end) %}
-  <section aria-label="{{ params.ariaLabel | default("Service information") }}" {{ commonAttributes | safe }}>
+{% if params.serviceName or (params.slots and (params.slots.start or params.slots.end)) %}
+  <section aria-label="{{ params.ariaLabel or 'Service information' }}" {{ commonAttributes | safe }}>
     {{ innerContent | safe }}
   </section>
 {% else %}
