collapse on mobile

--- a/govuk_frontend_jinja/templates/components/service-navigation/macro.html
+++ b/govuk_frontend_jinja/templates/components/service-navigation/macro.html
@@ -34,11 +34,14 @@ data-module="govuk-service-navigation"
 
       {# Navigation #}
       {% set navigationItems = ((params.navigation or []) | select | list) %}
+      {% set collapseNavigationOnMobile = params.collapseNavigationOnMobile | default(navigationItems | length > 1) %}
       {% if navigationItems | length or (params.slots and params.slots.navigationStart) or (params.slots and params.slots.navigationEnd) %}
         <nav aria-label="{{ params.navigationLabel or menuButtonText }}" class="govuk-service-navigation__wrapper {%- if params.navigationClasses %} {{ params.navigationClasses }}{% endif %}">
+          {% if collapseNavigationOnMobile %}
           <button type="button" class="govuk-service-navigation__toggle govuk-js-service-navigation-toggle" aria-controls="{{ navigationId }}" {%- if params.menuButtonLabel and params.menuButtonLabel != menuButtonText %} aria-label="{{ params.menuButtonLabel }}"{% endif %} hidden>
             {{ menuButtonText }}
           </button>
+          {% endif %}
 
           <ul class="govuk-service-navigation__list" id="{{ navigationId }}" >
 
