--- a/govuk_frontend_jinja/templates/components/service-navigation/macro.html
+++ b/govuk_frontend_jinja/templates/components/service-navigation/macro.html
@@ -38,7 +38,7 @@ data-module="govuk-service-navigation"
       {% if navigationItems | length or (params.slots and params.slots.navigationStart) or (params.slots and params.slots.navigationEnd) %}
         <nav aria-label="{{ params.navigationLabel or menuButtonText }}" class="govuk-service-navigation__wrapper {%- if params.navigationClasses %} {{ params.navigationClasses }}{% endif %}">
           {% if collapseNavigationOnMobile %}
-          <button type="button" class="govuk-service-navigation__toggle govuk-js-service-navigation-toggle" aria-controls="{{ navigationId }}" {%- if params.menuButtonLabel and params.menuButtonLabel != menuButtonText %} aria-label="{{ params.menuButtonLabel }}"{% endif %} hidden>
+          <button type="button" class="govuk-service-navigation__toggle govuk-js-service-navigation-toggle" aria-controls="{{ navigationId }}" {%- if params.menuButtonLabel and params.menuButtonLabel != menuButtonText %} aria-label="{{ params.menuButtonLabel }}"{% endif %} hidden aria-hidden="true">
             {{ menuButtonText }}
           </button>
           {% endif %}
