--- a/govuk_frontend_jinja/templates/components/phase-banner/macro.html
+++ b/govuk_frontend_jinja/templates/components/phase-banner/macro.html
@@ -2,7 +2,7 @@
 {% from "govuk_frontend_jinja/macros/attributes.html" import govukAttributes %}
 {% from "govuk_frontend_jinja/components/tag/macro.html" import govukTag -%}
 
-<div class="govuk-phase-banner
+<div class="govuk-phase-banner govuk-width-container
   {%- if params.classes %} {{ params.classes }}{% endif %}"
   {{- govukAttributes(params.attributes) }}>
   <p class="govuk-phase-banner__content">
