--- a/govuk_frontend_jinja/templates/template.html
+++ b/govuk_frontend_jinja/templates/template.html
@@ -1,21 +1,22 @@
 {% from "govuk_frontend_jinja/macros/attributes.html" import govukAttributes -%}
 {% from "govuk_frontend_jinja/components/skip-link/macro.html" import govukSkipLink -%}
 {% from "govuk_frontend_jinja/components/header/macro.html" import govukHeader -%}
+{% from "govuk_frontend_jinja/components/service-navigation/macro.html" import govukServiceNavigation -%}
 {% from "govuk_frontend_jinja/components/footer/macro.html" import govukFooter -%}
 
-{%- set _rebrand = govukRebrand() if govukRebrand is callable else govukRebrand -%}
-
-{# Hardcoded value is $govuk-brand-blue if rebrand, otherwise govuk-colour("black") -#}
-{% set themeColor = themeColor | default("#1d70b8" if _rebrand else "#0b0c0c", true) -%}
-{% set assetPath = assetPath | default("/assets/rebrand" if _rebrand else "/assets", true) -%}
+{# Hardcoded value is $govuk-brand-blue -#}
+{% set themeColor = themeColor | default("#1d70b8", true) -%}
+{% set assetPath = assetPath | default("/assets", true) -%}
 
 <!DOCTYPE html>
-<html lang="{{ htmlLang | default('en', true) }}" class="govuk-template {%- if _rebrand %} govuk-template--rebranded{% endif %} {%- if htmlClasses %} {{ htmlClasses }}{% endif %}">
+<html lang="{{ htmlLang | default('en', true) }}" class="govuk-template {%- if htmlClasses %} {{ htmlClasses }}{% endif %}">
   <head>
     <meta charset="utf-8">
     <title {%- if pageTitleLang %} lang="{{ pageTitleLang }}"{% endif %}>{% block pageTitle %}GOV.UK - The best place to find government services and information{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <meta name="theme-color" content="{{ themeColor }}">
+
+    {% block head %}{% endblock %}
 
     {% block headIcons %}
       <link rel="icon" sizes="48x48" href="{{ assetPath }}/images/favicon.ico">
@@ -24,8 +25,6 @@
       <link rel="apple-touch-icon" href="{{ assetPath }}/images/govuk-icon-180.png">
       <link rel="manifest" href="{{ assetPath }}/manifest.json">
     {% endblock %}
-
-    {% block head %}{% endblock %}
 
     {#- OpenGraph images needs to be absolute, so we need either a URL for the image or for assetUrl to be set #}
     {% if opengraphImageUrl or assetUrl %}
@@ -36,32 +35,71 @@
     <script {%- if cspNonce %} nonce="{{ cspNonce }}"{% endif %}>document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');</script>
     {% block bodyStart %}{% endblock %}
 
-    {% block skipLink %}
-      {{ govukSkipLink({
-        'href': '#main-content',
-        'text': 'Skip to main content'
-      }) }}
+    {% block govukSkipLink %}
+      {%- block skipLink %}
+        {{ govukSkipLink({
+          'href': '#main-content',
+          'text': 'Skip to main content'
+        }) }}
+      {% endblock -%}
     {% endblock %}
+
+    {# Only output <header> if any of its child blocks have content. #}
+    {% macro _govukTemplateHeader() %}
+      {%- if caller() | trim | length > 0 %}
+        <header class="govuk-template__header {%- if headerClasses %} {{ headerClasses }}{% endif %}" {{- govukAttributes(headerAttributes)}}>
+          {{ caller() }}
+        </header>
+      {%- endif %}
+    {% endmacro %}
 
     {% block header %}
-      {{ govukHeader({
-        'rebrand': _rebrand
-      }) }}
+      {% call _govukTemplateHeader() %}
+        {% block headerStart %}{% endblock %}
+        {% block govukHeader %}
+          {{ govukHeader() }}
+        {% endblock %}
+        {% block govukServiceNavigation %}
+          {%- if serviceName %}
+            {{ govukServiceNavigation({
+              'serviceName': serviceName,
+              'serviceUrl': serviceUrl
+            }) }}
+          {%- endif  %}
+        {% endblock %}
+        {% block headerEnd %}{% endblock %}
+      {% endcall %}
     {% endblock %}
 
-    {% block main %}
-      <div class="govuk-width-container {%- if containerClasses %} {{ containerClasses }}{% endif %}">
-        {% block beforeContent %}{% endblock %}
-        <main class="govuk-main-wrapper {%- if mainClasses %} {{ mainClasses }}{% endif %}" id="main-content" {%- if mainLang %} lang="{{ mainLang }}"{% endif %}>
+    {% block container %}
+      <div class="govuk-width-container {%- if containerClasses %} {{ containerClasses }}{% endif %}" {{- govukAttributes(containerAttributes) }}>
+        {% block containerStart %}{% block beforeContent %}{% endblock %}{% endblock %}
+        {% block main %}
+        <main class="govuk-main-wrapper {%- if mainClasses %} {{ mainClasses }}{% endif %}" id="main-content" {%- if mainLang %} lang="{{ mainLang }}"{% endif %} {{- govukAttributes(mainAttributes) }}>
           {% block content %}{% endblock %}
         </main>
+        {% endblock %}
+        {% block containerEnd %}{% endblock %}
       </div>
     {% endblock %}
 
+    {# Only output <footer> if any of its child blocks have content. #}
+    {% macro _govukTemplateFooter() %}
+      {%- if caller() | trim | length > 0 %}
+        <footer class="govuk-template__footer {%- if footerClasses %} {{ footerClasses }}{% endif %}" {{- govukAttributes(footerAttributes)}}>
+          {{ caller() }}
+        </footer>
+      {%- endif %}
+    {% endmacro %}
+
     {% block footer %}
-      {{ govukFooter({
-        'rebrand': _rebrand
-      }) }}
+      {% call _govukTemplateFooter() %}
+        {% block footerStart %}{% endblock %}
+        {% block govukFooter %}
+          {{ govukFooter() }}
+        {% endblock %}
+        {% block footerEnd %}{% endblock %}
+      {% endcall %}
     {% endblock %}
 
     {% block bodyEnd %}{% endblock %}
